--- a/public/logo.html
+++ b/public/logo.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-    <svg xmlns:mydata="http://www.w3.org/2000/svg" mydata:contrastcolor="ffffff" mydata:template="SingleColorHex1" mydata:presentation="2.5" mydata:layouttype="undefined" mydata:specialfontid="undefined" mydata:id1="457" mydata:id2="233" mydata:companyname="Max Escalante." mydata:companytagline="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 550 470" style="background-color: rgba(255, 255, 255, 0); background-image: radial-gradient(circle closest-side, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, rgba(255, 255, 255, 0) 100%);"><defs style="animation-play-state: running;"><filter id="electric-filter" x="-50%" y="-50%" width="200%" height="200%" style="animation-play-state: running;">
+    <svg xmlns:mydata="http://www.w3.org/2000/svg" wigth mydata:contrastcolor="ffffff" mydata:template="SingleColorHex1" mydata:presentation="2.5" mydata:layouttype="undefined" mydata:specialfontid="undefined"
+     mydata:id1="457" mydata:id2="233" mydata:companyname="Max Escalante." mydata:companytagline="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"viewBox="0 100 550 650" style="background-color: rgba(255, 255, 255, 0); background-image: radial-gradient(circle closest-side, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, 
+     rgba(255, 255, 255, 0) 100%);"><defs style="animation-play-state: running;"><filter id="electric-filter" x="-50%" y="-50%" width="200%" height="200%" style="animation-play-state: running;">
         <feFlood flood-color="#ffffff" result="flood-white" style="animation-play-state: running;"></feFlood>
         <feFlood flood-color="#d10754" result="flood-accent" style="animation-play-state: running;"></feFlood>
         <feComposite operator="out" in="flood-accent" in2="SourceAlpha" result="comp" style="animation-play-state: running;"></feComposite>
